Quorum3/Library/Tests/TypeCheckerGenerated/Fail/RetAssignBoolObjInteger.quorum
class Main
    action Main
        Boolean v
        v:SetValue(Test())
    end

    action Test() returns Boolean
        integer var = 5
        return var
    end
end